# fs-docker

./: .gitignore  README.md  os_walk_results.txt  oswalk.py  pyproject.toml  test.json  todo.txt
fs_docker_manager/: __main__.py  __main__old.py  create_table.py  create_table_old.py  docker.py  freesurfer_all.sh  freesurfer_tool.py  helper_functions.py  load_settings.py  location.json  prepare.py  prepare_dirs.py  print_settings.py  settings.json  update_settings.py
fs_docker_manager/tests/: create_table_tests.py  docker_tests.py  integration_tests.py  prepare_tests.py  table_test.py
tests/: create_table_tests.py  docker_tests.py  integration_tests.py  prepare_tests.py  table_test.py  testing_utils.py
