[tool.poetry]
name = "fs-docker-manager"
version = "0.1.0"
description = ""
authors = ["edo98811 <edoardofilippi1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
argparse = "^1.4.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
celescope-helper = "fs_docker.__main__:main"