[tool.poetry]
name = "fs-docker-manager"
version = "0.1.0"
description = "Package to simplify processing of large datasets with freesurfer and docker"
authors = ["edo98811 <edoardofilippi1998@gmail.com>"]
readme = "README.md"
include = [
    {path = "fs_docker_manager/settings.json"},
    {path = "fs_docker_manager/freesurfer_all.sh"}
]
exclude = ["fs_docker_manager.tests*"] 

[tool.poetry.dependencies]
python = "^3.12"
argparse = "^1.4.0"
click = "^8.1.7"
pandas = "^2.2.2"
XlsxWriter = "^3.2.0"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fs-docker = "fs_docker_manager.__main__:base"